--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "the statuspage for va.gov",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "dev": "flareact dev",
+    "build": "npm run css && flareact build",
+    "deploy": "npm run build && flareact publish",
+    "kv-gc": "node ./src/cli/gcMonitors.js",
+    "format": "prettier --write '**/*.{js,css,json,md}'",
+    "css": "postcss public/tailwind.css -o public/style.css"
   },
   "repository": {
     "type": "git",
