--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: yarn install
-      - run: yarn build
+      - run: npm install
+      - run: npm run build
         env:
           NODE_ENV: production
       - name: Publish
@@ -36,7 +36,7 @@ jobs:
             [ -z "$SECRET_TELEGRAM_CHAT_ID" ] && echo "Secret SECRET_TELEGRAM_CHAT_ID not set, creating dummy one..." && SECRET_TELEGRAM_CHAT_ID="default-gh-action-secret" || true
             [ -z "$SECRET_DISCORD_WEBHOOK_URL" ] && echo "Secret SECRET_DISCORD_WEBHOOK_URL not set, creating dummy one..." && SECRET_DISCORD_WEBHOOK_URL="default-gh-action-secret" || true
           postCommands: |
-            yarn kv-gc
+            npm run kv-gc
           secrets: |
             SECRET_SLACK_WEBHOOK_URL
             SECRET_TELEGRAM_API_TOKEN
