Updating wrangler with kv-namespaces, no idea what this is

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,3 +10,8 @@ crons = ["* * * * *"]
 [site]
 bucket = "out"
 entry-point = "./"
+
+[env.production]
+kv-namespaces = [{binding="KV_STATUS_PAGE", id="xxxx", preview_id=""}]
+zone_id="xxx"
+route="xxx"
