--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,8 @@
-name = "cf-workers-status-page"
+name = "vagov-cf-statuspage"
 workers_dev = true
 account_id = ""
 type = "webpack"
 webpack_config = "node_modules/flareact/webpack"
-
-kv-namespaces = [{binding="KV_STATUS_PAGE", id="xxxx", preview_id=""}]
-zone_id="xxx"
-route="xxx"
 
 [triggers]
 crons = ["* * * * *"]
