--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,16 @@
-name = "cf-workers-status-page"
+name = "vagov-cf-statuspage"
 workers_dev = true
-account_id = ""
+account_id = "41c979ec0c01c61c270c515c9b08fc59"
 type = "webpack"
 webpack_config = "node_modules/flareact/webpack"
+kv_namespaces = [{binding="KV_STATUS_PAGE", id="a9029515178b48729de0fd9bc809324a", preview_id=""}]
 
 [triggers]
-crons = ["* * * * *"]
+crons = ["*/5 * * * *"]
 
 [site]
 bucket = "out"
 entry-point = "./"
 
 [env.production]
-kv-namespaces = [{binding="KV_STATUS_PAGE", id="xxxx", preview_id=""}]
-zone_id="xxx"
-route="xxx"
+kv_namespaces = [{binding="KV_STATUS_PAGE", id="a9029515178b48729de0fd9bc809324a", preview_id=""}]
