--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "vagov-cf-statuspage"
+name = "monitor"
 workers_dev = true
 account_id = "41c979ec0c01c61c270c515c9b08fc59"
 type = "webpack"
