--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - fix-actions-3
+      - main
   schedule:
     - cron: '0 0 1 * *'
 
@@ -18,8 +18,6 @@ jobs:
           node-version: 14
       - run: yarn install
       - run: yarn build
-        env:
-          NODE_ENV: production
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
