--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - test-actions
+      - main
 
 jobs:
   deploy:
@@ -30,6 +30,8 @@ jobs:
             SECRET_TELEGRAM_API_TOKEN
             SECRET_TELEGRAM_CHAT_ID
             SECRET_DISCORD_WEBHOOK_URL
+          postCommands: |
+            yarn kv-gc
         env:
           CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           SECRET_SLACK_WEBHOOK_URL: ${{secrets.SECRET_SLACK_WEBHOOK_URL}}
