--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
-      - run: yarn install
-      - run: yarn build
+          node-version: 14
+      - run: npm install
+      - run: npm run build
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
@@ -31,7 +31,7 @@ jobs:
             SECRET_TELEGRAM_CHAT_ID
             SECRET_DISCORD_WEBHOOK_URL
           postCommands: |
-            yarn kv-gc
+            npm run kv-gc
         env:
           CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           SECRET_SLACK_WEBHOOK_URL: ${{secrets.SECRET_SLACK_WEBHOOK_URL}}
