--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   "author": "Boris Ning",
   "license": "MIT",
   "dependencies": {
-    "flareact": "^1.1.0",
-    "laco": "^1.2.1",
-    "laco-react": "^1.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "flareact": "1.2.0",
+    "laco": "1.2.1",
+    "laco-react": "1.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "node-fetch": "^2.6.1",
-    "postcss": "^8.2.10",
+    "postcss": "^8.2.13",
     "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.1.1",
+    "tailwindcss": "^2.1.2",
     "yaml-loader": "^0.6.0"
   }
 }
