--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ type = "webpack"
 account_id = "41c979ec0c01c61c270c515c9b08fc59"
 workers_dev = true
 webpack_config = "node_modules/flareact/webpack"
+compatibility_date = "2022-03-01"
 
 kv_namespaces = [{ binding = "KV_STATUS_PAGE", id="64693594e9924f8e985ac13b82354b7b" }]
 
